// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Introspector Type with scalar lists 1`] = `
"type Car {
  id: ID! @unique
  createdAt: DateTime!
  name: String!
  updatedAt: DateTime!
  User: [User]
}

type House {
  id: ID! @unique
  createdAt: DateTime!
  updatedAt: DateTime!
  User: [User]
  windows: Int!
}

type User {
  id: ID! @unique
  Car: [Car]
  createdAt: DateTime!
  House: [House]
  name355: String!
  scalarIntList: [Int]
  scalarStringList: [String]
  updatedAt: DateTime!
}"
`;

exports[`Introspector Type with scalar lists 2`] = `
"type Car {
  id: ID! @id(strategy: NONE)
  createdAt: DateTime! @createdAt
  name: String!
  updatedAt: DateTime! @updatedAt
  User: [User]
}

type House {
  id: ID! @id(strategy: NONE)
  createdAt: DateTime! @createdAt
  updatedAt: DateTime! @updatedAt
  User: [User]
  windows: Int!
}

type User {
  id: ID! @id(strategy: NONE)
  Car: [Car]
  createdAt: DateTime! @createdAt
  House: [House]
  name355: String!
  scalarIntList: [Int]
  scalarStringList: [String]
  updatedAt: DateTime! @updatedAt
}"
`;
